# ratio_terminal_rust

./: .gitignore  Cargo.toml  README.md
src/: helpers.rs  main.rs
src/helpers/: handle_ratio.rs
